Fix dates overlapping course dropdown in list view (#123)

--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -14,6 +14,12 @@
   position: relative;
 }
 
+@media only screen and (min-width: 992px) {
+  .tfc-list-view-wrapper #tfc-wall-rose {
+    width: 240px;
+  }
+}
+
 body {
   --tfc-dark-mode-text-primary: #e4e4e7;
   --tfc-dark-mode-text-secondary: #71717a;
